--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -1,11 +1,11 @@
 name: Validate Pull Request
 
 on:
-  pull_request:
+  pull_request_target:
 
 jobs:
   validate-pull-request:
-    name : Validate Pull Request
+    name: Validate Pull Request
     uses: Lombiq/GitHub-Actions/.github/workflows/validate-submodule-pull-request.yml@dev
     with:
       repository: Lombiq/Hastlayer-SDK
